; ModuleID = '/home/carl/AnghaBench/systemd/src/timedate/extr_timedatectl.c_on_properties_changed.c'
source_filename = "/home/carl/AnghaBench/systemd/src/timedate/extr_timedatectl.c_on_properties_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"s\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"Failed to read interface name: %m\00", align 1
@.str.2 = private unnamed_addr constant [34 x i8] c"org.freedesktop.timesync1.Manager\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32*)* @on_properties_changed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_properties_changed(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @assert(i32* %10)
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @sd_bus_message_read(i32* %12, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %8)
  store i32 %13, i32* %9, align 4
  %14 = load i32, i32* %9, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @log_error_errno(i32 %17, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0))
  store i32 %18, i32* %4, align 4
  br label %28

19:                                               ; preds = %3
  %20 = load i8*, i8** %8, align 8
  %21 = call i32 @streq_ptr(i8* %20, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0))
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %19
  store i32 0, i32* %4, align 4
  br label %28

24:                                               ; preds = %19
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @sd_bus_message_get_bus(i32* %25)
  %27 = call i32 @show_timesync_status_once(i32 %26)
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %24, %23, %16
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @sd_bus_message_read(i32*, i8*, i8**) #1

declare dso_local i32 @log_error_errno(i32, i8*) #1

declare dso_local i32 @streq_ptr(i8*, i8*) #1

declare dso_local i32 @show_timesync_status_once(i32) #1

declare dso_local i32 @sd_bus_message_get_bus(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
